--- a/views/mainpages/index.ejs
+++ b/views/mainpages/index.ejs
@@ -74,6 +74,9 @@
                 <div class="col-12 dbtn">
                     <input type="submit" value="Print" class="btn btn-primary">
                 </div>
+                <div class="col-12 dbtn">
+                    <input type="reset" value="Clear">
+                </div>
             </form>
         </div>
     </section>
