--- a/views/mainpages/index.ejs
+++ b/views/mainpages/index.ejs
@@ -59,15 +59,18 @@
                     <label for="inputZip" class="form-label">Postal Code</label>
                     <input type="text" name="postalcode" class="form-control" placeholder="110063" value="<%= v6 %>" required>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <label for="inputZip" class="form-label">Amount</label>
                     <input type="text" name="amt" class="form-control" placeholder="Rs 0.00" value="<%= v7 %>" required>
                 </div>
-                <div class="col-12 dbtn">
-                    <input type="submit" value="Print" class="btn btn-primary">
+                <div class="col-md-3">
+                    <label for="inputZip" class="form-label">Quantity</label>
+                    <input type="text" name="qty" class="form-control" placeholder="Quantity" value="<%= v8 %>" required>
                 </div>
                 <div class="col-12 dbtn">
-                    <input type="reset" value="Clear">
+                    <input type="submit" value="Print" class="btn btn-primary">
+
+                    <input type="reset" value="Clear" class="btn btn-primary">
                 </div>
             </form>
         </div>
